# ai_technical_challenge

./: README.md  frontend.py  main.py  pyproject.toml
app/core/: __init__.py  config.py  models.py
app/frontend/: __init__.py  gradio_app.py
app/routers/: __init__.py  ingestion.py  search.py
app/schemas/: __init__.py  requests.py  responses.py
